# haskell-mega-repo

./: .gitignore  .gitmodules  .travis.yml  README.md  build-in-linux-cabal.sh  build-in-linux.sh  cabal.project  mega-repo-tool.yaml  stack-ghc-7.10.3.yaml  stack-ghc-8.0.2.yaml  stack-ghc-8.2.1.yaml  stack.yaml  tajna.yaml  todo-fum-carbon.md  upload-docs.sh
arcola/: arcola.cabal
arcola/src/Network/: Arcola.hs
avar/: avar.cabal  package.yaml
avatar-app/: avatar-app.cabal  package.yaml
avatar-app/src/Futurice/App/: Avatar.hs
checklist-app/: checklist-app.cabal  checklist.js  package.yaml
checklist-app/import/: Import.hs
checklist-app/tests/: Tests.hs
contacts-api/: contacts-api.cabal  package.yaml
deprecated/futucli/: package.yaml
deprecated/futuhours-api/: package.yaml
deprecated/haxl-typed/: package.yaml
deprecated/log-logentries/: package.yaml
deprecated/servant-cache/: package.yaml
deprecated/servant-status/: package.yaml
deprecated/spice-stats/: package.yaml
deprecated/tdigest-ekg/: package.yaml
dynmap-cache/: dynmap-cache.cabal  package.yaml
dynmap-cache/src/Futurice/: Cache.hs  DynMap.hs
dynmap-cache/test/: Tests.hs
email-proxy/: email-proxy.cabal  package.yaml
env-config/: env-config.cabal  package.yaml
env-config/src/Futurice/: EnvConfig.hs
favicon-app/: favicon-app.cabal  package.yaml
favicon-app/src/: Main.hs
flowdock-cli/: package.yaml
fum-api/: fum-api.cabal  package.yaml
fum-carbon-app/: README.md  fum-carbon-app.cabal  futu.js  lomake.js  package.yaml
fum-carbon-app/src/: Kleene.hs
fum-carbon-app/src/Futurice/: Lomake.hs
fum-client/: fum-client.cabal  package.yaml
fum-client-types/: README.md  fum-client-types.cabal  package.yaml
fum-client/src/: FUM.hs
fum-client/src/FUM/: Types.hs
fum-types/: README.md  fum-types.cabal  package.yaml
futurice-constants/: README.md  constants.sample.json  futurice-constants.cabal  package.yaml
futurice-constants/src/Futurice/: Constants.hs
futurice-foundation/: futurice-foundation.cabal  package.yaml
futurice-github/: futurice-github.cabal  package.yaml
futurice-github/src/Futurice/: GitHub.hs
futurice-integrations/: futurice-integrations.cabal  package.yaml
futurice-logo/: futurice-logo.cabal  package.yaml
futurice-metrics/: futurice-metrics.cabal  package.yaml
futurice-postgres/: README.md  futurice-postgres.cabal  package.yaml
futurice-postgres/src/Futurice/: Postgres.hs
futurice-pure-trans/: futurice-pure-trans.cabal  package.yaml
futurice-reports/: futurice-reports.cabal  package.yaml
futurice-servant/: README.md  futurice-servant.cabal  package.yaml
futurice-servant/src/Futurice/: Servant.hs
futurice-tribes/: .gitignore  README.md  futurice-tribes.cabal  package.yaml  tribes.sample.json
futurice-tribes/src/Futurice/: Email.hs  Office.hs  Tribe.hs
github-proxy/: github-proxy.cabal  package.yaml  schema.psql
github-proxy/cli/: Main.hs
github-sync/: github-sync.cabal  package.yaml
github-sync/srv/: Main.hs
haxl-fxtra/: haxl-fxtra.cabal  package.yaml
hours-api/: hours-api.cabal  package.yaml
kleene/: kleene.cabal
kleene/src/: Kleene.hs
kleene/src/Kleene/: Functor.hs  Partition.hs  RE.hs  Sets.hs
log-cloudwatch/: README.md  log-cloudwatch.cabal  package.yaml
mega-repo-tool/: mega-repo-tool.cabal  package.yaml
optparse-sop/: optparse-sop.cabal
periocron/: package.yaml  periocron.cabal
periocron/src/Futurice/: Periocron.hs
personio-client/: package.yaml  personio-client.cabal
personio-client/fixtures/: employee-i-github.json  employee-i-iban.json  employee-i-login.json  employee-m-email.json  employee-m-endd.json  employee-m-etype.json  employee-m-iban.json  employee-m-office.json  employee-m-phone.json  employee-m-role.json  employee-m-tribe.json  employee.json
personio-client/src/Personio/: Eval.hs  Types.hs
personio-client/tests/: Tests.hs
planmill-client/: package.yaml  planmill-client.cabal
planmill-client/cli2/: Main.hs
planmill-client/src/PlanMill/: Endpoints.hs  Eval.hs  Queries.hs
planmill-client/test/: Tests.hs
planmill-proxy/: package.yaml  planmill-proxy.cabal
planmill-sync/: README.md  package.yaml  planmill-sync.cabal
planmill-sync/srv/: Main.hs
proxy-app/: package.yaml  proxy-app.cabal
proxy-app/src/Servant/: Proxy.hs
proxy-app/tests/: Tests.hs
proxy-mgmt-app/: package.yaml  proxy-mgmt-app.cabal  schema.psql
reports-app/: package.yaml  reports-app.cabal
reports-app/src/Futurice/: Vec.hs
scripts/: looper.sh  travis.sh
servant-Chart/: package.yaml  servant-Chart.cabal
servant-Chart/src/Servant/: Chart.hs
servant-algebraic-graphs/: README.md  package.yaml  servant-algebraic-graphs.cabal
servant-algebraic-graphs/src/Servant/: Graph.hs
servant-binary-tagged/: package.yaml  servant-binary-tagged.cabal
servant-dashdo/: README.md  servant-dashdo.cabal
servant-dashdo/src/Dashdo/: Servant.hs
servant-status/: package.yaml  servant-status.cabal
smileys-app/: package.yaml  schema.psql  smileys-app.cabal
smileys-app/src/Futurice/: APL.hs
sms-proxy/: package.yaml  sms-proxy.cabal
tdigest-ekg/: package.yaml  tdigest-ekg.cabal
theme-app/: package.yaml  theme-app.cabal
(+219 files in other folders)
