name:                arcola
version:             0
synopsis:            A barebone network servers
description:         Arcola is sublabel of warp. Let's you write simple, non-HTTP servers.
homepage:            https://github.com/futurice/haskell-mega-repo
license:             BSD3
license-file:        LICENSE
author:              Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           (c) 2017 Futurice
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Network.Arcola
  build-depends:
    base >=4.9 && <4.11,
    bytestring,
    streaming-commons,
    network

executable arcola-echo
  default-language:    Haskell2010
  hs-source-dirs:      echo
  main-is:             Main.hs
  build-depends:
    base,
    bytestring,
    arcola
