name:           kleene
version:        0
synopsis:       Kleene algebra
description:    Copy from README when ready
category:       Web
homepage:       https://github.com/futurice/haskell-mega-repo#readme
bug-reports:    https://github.com/futurice/haskell-mega-repo/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD3
license-file:   LICENSE
tested-with:    GHC==8.0.2, GHC==8.2.1
build-type:     Custom
cabal-version:  >= 1.10
extra-source-files:
  README.md

custom-setup
  setup-depends:
    base, Cabal, cabal-doctest >=1.0.2 && <1.1

source-repository head
  type: git
  location: https://github.com/futurice/haskell-mega-repo

library
  build-depends:
    base >= 4.9 && <4.11,
    base-compat >=0.9.3 && <0.10,
    regex-applicative,
    range-set-list,
    text
  other-extensions:
    GADTs OverloadedStrings
  exposed-modules:
    Kleene
  ghc-options: -Wall
  hs-source-dirs: src
  default-language: Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:
    base,
    doctest >= 0.11.3 && <0.12,
    QuickCheck ==2.10.*,
    template-haskell
  ghc-options:         -Wall -threaded
  hs-source-dirs:      tests
  default-language:    Haskell2010
