name:           servant-dashdo
version:        0
synopsis:       Servant support for dashdo
description:    Servant support for dashdo
category:       Web
homepage:       https://github.com/futurice/haskell-mega-repo#readme
bug-reports:    https://github.com/futurice/haskell-mega-repo/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD3
license-file:   LICENSE
tested-with:    GHC==8.0.2, GHC==8.2.1
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/futurice/haskell-mega-repo

library
  exposed-modules:
    Dashdo.Servant
  build-depends:
    base            >=4.9     && <4.11,
    dashdo,
    bytestring,
    containers,
    http-api-data   >=0.3.7.1 && <0.4,
    http-media      >=0.6.2,
    lucid           >=2.9.9   && <2.10,
    random          >=1.1     && <1.2,
    safe-exceptions >=0.1.6.0 && <0.2,
    servant-lucid   >=0.7.1   && <0.8,
    servant-server  >=0.11    && <0.13,
    text,
    transformers,
    uuid-types      >=1.0.3   && <1.1,
    wai             >=3.2.1.1 && <3.3
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
